# screamer

./: .bumpversion.cfg  .gitattributes  .gitignore  .readthedocs.yml  CHANGELOG.md  CMakeLists.txt  DEVGUIDE.md  MANIFEST.in  README.md  pyproject.toml  pytest.ini  setup.py  tasks.py
.github/workflows/: ci.yml  docs.yml  publish.yml  temp.yml  test.yml  test_always.yml
benchmarks/: __init__.py  benchmark_rolling.csv  benchmark_rolling.py  make_plots.py  make_rank_plot.py  run_benchmarks.py
benchmarks/experiments/: benchmark_results.csv  benchmark_results_old.csv  benchmark_rolling.csv  bm__Diff__numpy.csv  bm__Diff__pandas.csv  bm__Diff__screamer.csv  bm__EwMean__numpy.csv  bm__EwMean__pandas.csv  bm__EwMean__screamer.csv  bm__Ffill__numpy.csv  bm__Ffill__pandas.csv  bm__Ffill__screamer.csv  bm__FillNa__numpy.csv  bm__FillNa__pandas.csv  bm__FillNa__screamer.csv  bm__Lag__numpy.csv  bm__Lag__pandas.csv  bm__Lag__screamer.csv  bm__LogReturn__numpy.csv  bm__LogReturn__pandas.csv  bm__LogReturn__screamer.csv  bm__Return__numpy.csv  bm__Return__pandas.csv  bm__Return__screamer.csv  bm__RollingKurt__numpy__stride.csv  bm__RollingKurt__pandas.csv  bm__RollingKurt__screamer.csv  bm__RollingMax__numpy__stride.csv  bm__RollingMax__pandas.csv  bm__RollingMax__screamer.csv  bm__RollingMean2__numpy__cumsum.csv  bm__RollingMean2__numpy__stride.csv  bm__RollingMean2__pandas.csv  bm__RollingMean2__screamer.csv  bm__RollingMean__numpy__cumsum.csv  bm__RollingMean__numpy__stride.csv  bm__RollingMean__pandas.csv  bm__RollingMean__screamer.csv  bm__RollingMedian__numpy__stride.csv  bm__RollingMedian__pandas.csv  (+23 more)
bindings/: bindings.cpp  bindings_core.cpp  bindings_ew.cpp  bindings_fin.cpp  bindings_math.cpp  bindings_misc.cpp  bindings_myfunctors.cpp  bindings_rolling.cpp  bindings_signal.cpp  screamer_bindings.cpp
devtools/: __init__.py  autogen_files.py  generate_screamer__init__.py  report_baselines.py  report_class_args.py  report_docs.py
devtools/baselines/: Butter2.py  EwKurt.py  EwRms.py  EwSkew.py  Exp.py  Ffill.py  Log.py  RollingFracDiff.py  RollingOU.py  RollingPoly1.py  RollingPoly2.py  RollingRSI.py  RollingSigmaClip.py  Sqrt.py  Tanh.py
devtools/design_experiments/: interface_v2.ipynb
docs/: FUNCTIONS.md  _usage.rst  conf.py  functions.rst  functions_ew.rst  functions_math.rst  functions_pre.rst  functions_rolling.rst  index.rst  topic_fin.rst  topic_rolling.rst  topic_signal.rst  usage.md  usage.rst
docs/ew/: EwKurt.md  EwMean.md  EwRms.md  EwSkew.md  EwStd.md  EwVar.md  EwZscore.md
docs/functions_fin/: LogReturn.md  Return.md
docs/functions_misc/: Diff.md
docs/functions_rolling/: RollingKurt.md  RollingMean.md  RollingOU.md  RollingPoly1.md  RollingPoly2.md  RollingSigmaClip.md  RollingStd.md  RollingSum.md  RollingZscore.md
docs/functions_signal/: Butter2.md  Butter4.md  ButterN.md
docs/math/: Abs.md  Erf.md  Erfc.md  Exp.md  Log.md  Sign.md  Sqrt.md
docs/preprocessing/: Clip.md  Ffill.md  FillNa.md
docs/rolling/: RollingKurt.md  RollingMax.md  RollingMean.md  RollingMedian.md  RollingMin.md  RollingPoly1.md  RollingPoly2.md  RollingQuantile.md  RollingRms.md  RollingSkew.md  RollingStd.md  RollingSum.md  RollingVar.md  RollingZscore.md
examples/: lag_example.py
include/screamer/: base.h  buffer.h  butter.h  butter2.h  clip.h  diff.h  ew_kurt.h  ew_mean.h  ew_rms.h  ew_skew.h  ew_std.h  ew_var.h  ew_zscore.h  ewma.h  expanding_smexp.h  expanding_smpoly.h  expanding_smpower.h  ffill.h  fillna.h  float_info.h  fracdiff.h  lag.h  lagq.h  linear.h  log_return.h  my_functors.h  order_statistic_tree.h  order_statistic_tree_v2.h  order_statistic_tree_v3.h  order_statistic_tree_v4.h  return.h  rolling_kurt.h  rolling_max.h  rolling_mean.h  rolling_mean2.h  rolling_mean_nan.h  rolling_median.h  rolling_median2.h  rolling_min.h  rolling_ofi.h  (+30 more)
include/screamer/common/: async_generator.h  base.h  base2.h  base_n.h  base_n.tpp  functor_base.h  functor_iterator.h  iterator_n.h  math.h  screamer_math.h
include/screamer/indicators/: lag.h
reference_impls/: __init__.py  numpy.py  pandas.py  scipy.py  screamer.py
screamer/: __init__.py  generators.py
scripts/: autogen_files.py  autogen_screamer_files.py  debug.py  time_lag_vs_lagq.py  time_sma_vs_smal.py
src/screamer/: lag.cpp
src/screamer/common/: async_generator.cpp  base.cpp  iterator_n.cpp
src/screamer/detail/: start_policy.cpp
src/screamer/indicators/: lag.cpp
tests/: CMakeLists.txt  __init__.py  lib_info.py  param_cases.py  test_arg_window_size.py  test_baselines.py  test_delay_arg.py  test_diff.py  test_fracdiff.py  test_lag.cpp  test_lag.py  test_matrix.py  test_reference_impl.py  test_rolling_sum.py  test_start_policies.py  test_stream_vs_batch.py  test_stream_vs_generator.py  test_tensor.py  test_view.py
thijs/: CMakeLists.txt  butter4.cpp  butter4.py  buttern.cpp  rdelay.cpp  rmean.cpp  rsum.cpp  signal.cpp
