[project]

name = "screamer"

version = "0.1.30"

requires-python = ">= 3.9"

authors = [
  {name = "Thijs van den Berg", email = "thijs@sitmo.com"},
  {name = "Mohammadjavad Vakili", email = "mohammadjavad.vakili@gmail.com"}
]

maintainers = [
  {name = "Thijs van den Berg", email = "thijs@sitmo.com"},
  {name = "Mohammadjavad Vakili", email = "mohammadjavad.vakili@gmail.com"}
]

description = "Screamingly fast financial technical indicators with C++ performance and Python simplicity, built for both time series analysis and real-time, event-driven streaming."

readme = "README.md"

license = {text = "MIT License"}

dependencies = ["pybind11>=2.9"]

keywords = ["streaming", "indicators", "real-time", "algorithmic", "trading", "low-latency"]

classifiers=[
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: C++",
    "Operating System :: OS Independent"
]

[project.urls]
Homepage = "https://github.com/quantfinlib/screamer"
Documentation = "https://readthedocs.org"
Repository = "https://github.com/quantfinlib/screamer.git"
Issues = "https://github.com/quantfinlib/screamer/issues"
Changelog = "https://github.com/quantfinlib/screamer/blob/master/CHANGELOG.md"







[tool.poetry]
name = "screamer"
version = "0.1.30"
description = "Screamingly fast financial technical indicators with C++ performance and Python simplicity, built for both time series analysis and real-time, event-driven streaming."
authors = ["Thijs van den Berg <thijs@sitmo.com>, Mohammadjavad Vakili <mohammadjavad.vakili@gmail.com>"]
maintainers = [
    "Thijs van den Berg <thijs@sitmo.com>", 
    "Mohammadjavad Vakili <mohammadjavad.vakili@gmail.com>" 
]
license = "MIT"
readme = "README.md"
packages = [{ include = "screamer" }]


[tool.poetry.dependencies]
python = "^3.9"
pybind11 = "^2.9"

[tool.poetry.dev-dependencies]
pytest = "^7.0"

[tool.poetry.group.dev.dependencies]
wheel = "^0.44.0"
build = "^1.2.2.post1"
bump2version = "^1.0.1"
invoke = "^2.2.0"
numpy = { version = "^2.0.1", python = ">=3.10"}

[tool.pytest.ini_options]
addopts = "--ignore=_skbuild"

[build-system]
requires = ["scikit-build-core", "pybind11"]
build-backend = "scikit_build_core.build"
