[project]

name = "screamer"

version = "0.1.37"

requires-python = ">= 3.9"

authors = [
  {name = "Thijs van den Berg", email = "thijs@sitmo.com"},
  {name = "Mohammadjavad Vakili", email = "mohammadjavad.vakili@gmail.com"}
]

maintainers = [
  {name = "Thijs van den Berg", email = "thijs@sitmo.com"},
  {name = "Mohammadjavad Vakili", email = "mohammadjavad.vakili@gmail.com"}
]

description = "Screamingly fast financial technical indicators with C++ performance and Python simplicity, built for both time series analysis and real-time, event-driven streaming."

readme = "README.md"

license = {text = "MIT License"}

dependencies = ["pybind11>=2.9"]

keywords = ["streaming", "indicators", "real-time", "algorithmic", "trading", "low-latency"]

classifiers=[
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: C++",
    "Operating System :: OS Independent"
]

[project.urls]
Homepage = "https://github.com/quantfinlib/screamer"
Documentation = "https://screamer.readthedocs.io/en/latest/"
Repository = "https://github.com/quantfinlib/screamer.git"
Issues = "https://github.com/quantfinlib/screamer/issues"
Changelog = "https://github.com/quantfinlib/screamer/blob/master/CHANGELOG.md"







[tool.poetry]
name = "screamer"
version = "0.1.37"
description = "Screamingly fast financial technical indicators with C++ performance and Python simplicity, built for both time series analysis and real-time, event-driven streaming."
authors = ["Thijs van den Berg <thijs@sitmo.com>, Mohammadjavad Vakili <mohammadjavad.vakili@gmail.com>"]
maintainers = [
    "Thijs van den Berg <thijs@sitmo.com>", 
    "Mohammadjavad Vakili <mohammadjavad.vakili@gmail.com>" 
]
license = "MIT"
readme = "README.md"
packages = [{ include = "screamer" }]


[tool.poetry.dependencies]
python = "^3.9"
pybind11 = "^2.9"

[tool.poetry.group.dev.dependencies]
bump2version = "^1.0.1"
invoke = "^2.2.0"
numpy = { version = "^2.0.1", python = ">=3.10"}
matplotlib = "^3.9.2"
pandas = "^2.2.3"

[tool.poetry.group.testing.dependencies]
pytest = "^7.0"
numpy = { version = "^2.0.1", python = ">=3.10"}
scipy = { version = "^1.14", python = ">=3.10"}
pandas = "^2.2.3"

[tool.poetry.group.docs.dependencies]
matplotlib = "^3.9.2"
numpy = { version = "^2.0.1", python = ">=3.10"}
sphinx = { version = "^8.1", python = ">=3.10" }
sphinx-rtd-theme = "^3.0.1"
sphinxcontrib-napoleon = "^0.7"
sphinx-autodoc-typehints = { version = "^2.5", python = ">=3.10" }
myst-parser = { version = "^4.0", python = ">=3.10" }
nbsphinx-link = "^1.3.0"
sphinx-exec-code = "^0.12"
sphinx-plotly-directive = "^0.1.3"
ipython = "8.14"

[tool.pytest.ini_options]
addopts = "--ignore=_skbuild"

[build-system]
requires = ["scikit-build-core", "pybind11"]
build-backend = "scikit_build_core.build"
